# RISC-V-simulator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.ci/: build.sh  config.sh  format_check.sh  run_tests.sh  setup.sh  tidy_check.sh
.github/workflows/: ci.yml
bin_tests/: dummy  fib_10  fib_20  fib_40  nqueen_14  nqueen_16  nqueen_20  nqueen_8
cmake/: FindLibElf.cmake  Generation.cmake
common/: bitops.h
compiler/: CMakeLists.txt  compiler.cpp  compiler.hpp
configs/: macros.hpp  utils.hpp
interpreter/: BB.h  CMakeLists.txt  csr.h  decoder.h  executor.h  executor_cosim.cpp  executor_impl.cpp  executor_impl.h  fetch.h  gen_inst_decode.rb  gpr.h  instruction.h
interpreter/templates/: executor_gen.cpp.erb  executor_gen.h.erb  instructions_decode_gen.cpp.erb  instructions_decode_gen.h.erb  instructions_enum_gen.h.erb
memory/: CMakeLists.txt  mmu.cpp  page.cpp  phys_mem.cpp  virtual_mem.cpp
memory/includes/: mmu.hpp  page.hpp  phys_mem.hpp  virtual_mem.hpp
memory/includes/common/: mem.hpp
memory/phys_mem/: phys_mem.cpp
memory/tests/: CMakeLists.txt  mem_tests.cpp  phys_mem_tests.cpp
scripts/: install_third_party.py  run_clang_tidy.py  third_party_list.txt
simulator/: CMakeLists.txt  hart.h  hart_impl.cpp  simulator.cpp
tests/: CMakeLists.txt
tests/e2e_tests/: NQueensGCC.c  fib.c  nqueen.c  print.h  simple_print.c
tests/interpreter_tests/: CMakeLists.txt  decoder_tests.cpp  executor_tests.cpp  interpreter_tests.cpp
tests/mem_tests/: CMakeLists.txt  mem_tests.cpp
